updated favicon, removed .DS_Store files

--- a/api-docs/redoc/redoc.hbs
+++ b/api-docs/redoc/redoc.hbs
@@ -9,7 +9,7 @@
   <meta property="og:title" content="FaithInventory API Docs 1.0"/>
   <meta property="og:image" content="/api/1/docs/img/open-graph.jpg"/>
   <meta property="og:description" content="This is a ReST API that interacts with faithinventory.com resources."/>
-  <meta property="og:url" content="https://dev.faithinventory.com/api/1/docs/" />
+  <meta property="og:url" content="https://faithinventory.com/api/1/docs/" />
   <link rel="shortcut icon" href="img/favicon.png" type="image/png"/>
   <style>
     
